--- a/docroot/sites/all/themes/fldc14/sass/components/_navigation.scss
+++ b/docroot/sites/all/themes/fldc14/sass/components/_navigation.scss
@@ -211,7 +211,8 @@
         right: 30px;
         top: 31px;
         width: 0; 
-        height: 0; 
+        height: 0;
+        pointer-events: none;
       }
       
       &.expanded-active-processed:after {
